--- a/TranslationMod/languages/RU/dictionaries/NPC.json
+++ b/TranslationMod/languages/RU/dictionaries/NPC.json
@@ -47,8 +47,8 @@
 	"I gave it to him one year and he wouldn't stop talking about it.": "Я подарил это ему один год и он говорил об этом не переставая.",
 	"I gave it to her one year and she wouldn't stop talking about it.": "Я подарил это её один год и она говорила об этом не переставая.",
 	" It would make a great gift.": " Это был бы отличный подарок.",
-	"You could really make him with that.": "Ты действительно мог бы порадовать его этим",
-	"You could really make her with that.": "Ты действительно мог бы порадовать её этим",
+	"You could really make him happy with that.": "Ты действительно мог бы порадовать его этим",
+	"You could really make her happy with that.": "Ты действительно мог бы порадовать её этим",
 	"Abigail loves '@key'. She keeps a box of it under her bed. Weird, huh?": "Эбигейл обожает '@key'. Она держит целую коробку у себя под кроватью. Странно, правда?",
 	"hates '@key'? He finds it absolutely @key.": "",
 	"hates '@key'? She finds it absolutely @key.": "",
