Fix mail, missing achievements translation, other fixes

--- a/TranslationMod/languages/RU/dictionaries/DateStrings.json
+++ b/TranslationMod/languages/RU/dictionaries/DateStrings.json
@@ -54,5 +54,7 @@
   "Thu. @number": "Чт. @number",
   "Fri. @number": "Пт. @number",
   "Sat. @number": "Сб. @number",
-  "Sun. @number": "Вс. @number"
+  "Sun. @number": "Вс. @number",
+  
+  "Year @number": "Год @number"
 }
