--- a/TranslationMod/languages/RU/dictionaries/KeyWords.json
+++ b/TranslationMod/languages/RU/dictionaries/KeyWords.json
@@ -257,7 +257,7 @@
         "Fishing": "",
         "fisherman": "",
         "fishing enthusiast": "",
-        "Delivery": "",
+        "Delivery": "Доставка",
         "soup": "",
         "pizza": "",
         "salad": "",
