--- a/TranslationMod/languages/RU/dictionaries/Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/Menus.json
@@ -142,12 +142,13 @@
     "New cooking recipe: @key": "",
     "New crafting recipe: @key": "",
     "No Saved Games Found": "Сохраненные игры не найдены",
-    "Really delete file: @key?": "",
+    "Delete File":"Удалить файл",
+    "Really delete file: @key?": "Точно удалить файл: @key?",
     "Name": "Имя",
     "Farm@newlineName": "Название@newlineФермы",
     "Favorite@newlineThing": "Любимая@newlineВещь",
     "Direction": "",
-    "Animal@newlinePreference": "Предпочит@newlineЖивотных",
+    "Animal@newlinePreference": "Любимое@newlineЖивотное",
     "Cat": "Кошка",
     "Dog": "Собака",
     "dog": "собака",
@@ -163,7 +164,7 @@
     "Skip Intro": "Пропуск интро",
     "Acc.": "Аксс.",
     "Calico Desert": "Пустыня Калико",
-    "Wizard's Tower": "",
+    "Wizard's Tower": "Башня мага",
     "Underground Mine": "Шахта",
     "Desert": "Пустыня",
     "Bus Stop": "Автобусная остановка",
@@ -179,23 +180,23 @@
     "Leah's Cottage": "",
     "1 Willow Lane@newlineHome of Jodi, Kent & Sam": "",
     "2 Willow Lane@newlineHome of Emily & Haley": "",
-    "Town Square": "",
+    "Town Square": "Городская площадь",
     "Harvey's Clinic@newlineOpen 9:00AM to 3:00PM": "Клиника Харви@newlineОткрыто с 9:00AM до 3:00PM",
-    "Pierre's General Store@newlineHome of Pierre, Caroline & Abigail@newlineOpen 9:00AM to 6:00PM (Closed Wednesday)": "Универмаг Пьера@newlineДом Пьера, Кэролайн и Эбигейл@newlineОткрыто с 9:00AM до 6:00PM (Закрыто по Средам)",
-    "Blacksmith@newlineOpen 9:00AM to 4:00PM": "",
-    "Saloon@newlineOpen 12:00PM To 12:00AM": "",
+    "Pierre's General Store@newlineHome of Pierre, Caroline & Abigail @newlineOpen 9:00AM to 6:00PM (Closed Wednesday)": "Универмаг Пьера@newlineДом Пьера, Кэролайн и Эбигейл@newlineОткрыто с 9:00AM до 6:00PM (Закрыто по Средам)",
+    "Blacksmith@newlineOpen 9:00AM to 4:00PM": "Кузнец@newlineОткрыто с 9:00AM до 4:00PM",
+    "Saloon@newlineOpen 12:00PM To 12:00AM": "Салун@newlineОткрыто с 12:00PM до 12:00AM",
     "Mayor's Manor": "Поместье Мэра",
     "Stardew Valley Museum & Library@newlineOpen 8:00AM to 6:00PM": "Музей и библиотека Стардью Вэлли@newlineОткрыто с 8:00AM до 6:00PM",
-    "Elliott's Cabin": "",
-    "Sewer": "",
-    "Graveyard": "",
-    "Trailer": "",
+    "Elliott's Cabin": "Хижина Эллиота",
+    "Sewer": "Канализация",
+    "Graveyard": "Кладбище",
+    "Trailer": "Трейлер",
     "1 River Road@newlineHome of George, Evelyn & Alex": "",
     "Carpenter's Shop@newlineHome of Robin, Demetrius, Sebastian & Maru@newlineShop open 9:00AM to 5:00PM most days": "Столярный цех@newlineДом Робин, Деметрия, Себастьяна и Мару@newlineМагазин открыт с 9:00AM до 5:00PM, почти все дни",
-    "Tent": "",
-    "Mines": "",
+    "Tent": "Палатка",
+    "Mines": "Шахты",
     "Adventurer's Guild@newlineOpen 2:00PM to 10:00PM": "Гильдия приключенцев@newlineОткрыто с 2:00AM до 10:00PM",
-    "Quarry": "",
+    "Quarry": "Карьер",
     "JojaMart@newlineOpen 9:00AM to 11:00PM": "JojaMart@newlineОткрыто с 9:00AM до 11:00PM",
     "Fish Shop@newlineOpen 9:00AM to 5:00PM": "Рыбный Магазин@newlineОткрыто с 9:00AM до 5:00PM",
     "Spa @newline Open all day": "",
@@ -355,6 +356,7 @@
     "Loading": "Загрузка",
     "Winner!": "Победитель",
     "You Lose": "Вы проиграли",
+    "(single)": "(одинок)",
     "(boyfriend)":"(парень)",
     "(girlfriend)":"(девушка)",
     "This change will not take effect until you restart the game": "Это изменеие вступит в силу только после перезагрузки игры"
