--- a/TranslationMod/languages/RU/dictionaries/Object.cs.json
+++ b/TranslationMod/languages/RU/dictionaries/Object.cs.json
@@ -1,6 +1,9 @@
 {
-
+  "__comment":"in shop items hover",
     "@key x @number":"@key x @number",
+  "__comment":"Achievements, like Gofer\r\n\r\nDescription",
+    "@key@newline@newline@key":"@key@newline@newline@key",
+  "__comment":"Collections page (fishing, shipped, etc. item hover description)",
     "@key@newline@newline@key@newline@newline@key": "@key@newline@newline@key@newline@newline@key",
 
     "Use in the water to catch fish.":"Используйте на водоёмах, чтобы ловить рыбу.",
