--- a/TranslationMod/languages/RU/dictionaries/Achievements.json
+++ b/TranslationMod/languages/RU/dictionaries/Achievements.json
@@ -1,66 +1,64 @@
 {
-    "AchievementsName": {
+    "Achievements": {
         "Greenhorn (15k)": "Новичок (15k)",
-        "Cowpoke (50k)": "Ковбой (50k)",
-        "Homesteader (250k)": "Поселенец (250k)",
-        "Millionaire (1mil)": "Миллионер (1млн)",
-        "Legend (10mil)": "Легенда (10млн)",
-        "A Complete Collection": "Полная коллекция",
-        "A New Friend": "Новый друг",
-        "Best Friends": "Лучший друг",
-        "The Beloved Farmer": "Обожаемый фермер",
-        "Cliques": "Группировка",
-        "Networking": "Сообщество",
-        "Popular": "Популярный",
-        "Cook": "Повар",
-        "Sous Chef": "Су-Шеф",
-        "Gourmet Chef": "Шеф-гурман",
-        "Moving Up": "Расширяйся",
-        "Living Large": "Роскошная жизнь",
-        "D.I.Y.": "Сделай сам",
-        "Artisan": "Ремесленник",
-        "Craft Master": "Крафт-мастер",
-        "Fisherman": "Рыбак",
-        "Ol' Mariner": "Старый моряк",
-        "Master Angler": "Мастер-Удильщик",
-        "Mother Catch": "Ловец",
-        "Treasure Trove": "Сокровищница",
-        "Gofer": "Поди-подай",
-        "A Big Help": "Выручатель",
-        "Polyculture": "Поликультура",
-        "Monoculture": "Монокультура",
-        "Full Shipment": "Полная доставка"
-    },
-    "AchievementsDescription": {
         "Earn 15,000g": "Заработать 15,000g",
+        "Cowpoke (50k)": "Ковбой (50k)",
         "Earn 50,000g": "Заработать 50,000g",
+        "Homesteader (250k)": "Поселенец (250k)",
         "Earn 250,000g": "Заработать 250,000g",
+        "Millionaire (1mil)": "Миллионер (1млн)",
         "Earn 1,000,000g": "Заработать 1,000,000g",
+        "Legend (10mil)": "Легенда (10млн)",
         "Earn 10,000,000g": "Заработать 10,000,000g",
+        "A Complete Collection": "Полная коллекция",
         "Complete the museum collection.": "Собрать все экспонаты в музее.",
+        "A New Friend": "Новый друг",
         "Reach a 5-heart friend level with someone.": "Достигнуть 5 сердец в отношении с 1 человеком.",
+        "Best Friends": "Лучший друг",
         "Reach a 10-heart friend level with someone.": "Достигнуть 10 сердец в отношении с 1 человеком.",
+        "The Beloved Farmer": "Обожаемый фермер",
         "Reach a 10-heart friend level with 8 people.": "Достигнуть 10 сердец в отношении с 8 людьми.",
+        "Cliques": "Группировка",
         "Reach a 5-heart friend level with 4 people.": "Достигнуть 5 сердец в отношении с 4 людьми.",
+        "Networking": "Сообщество",
         "Reach a 5-heart friend level with 10 people.": "Достигнуть 5 сердец в отношении с 10 людьми.",
+        "Popular": "Популярный",
         "Reach a 5-heart friend level with 20 people.": "Достигнуть 5 сердец в отношении с 20 людьми .",
+        "Cook": "Повар",
         "Cook 10 different recipes.": "Приготовить 10 разных рецептов.",
+        "Sous Chef": "Су-Шеф",
         "Cook 25 different recipes.": "Приготовить 25 разных рецептов.",
+        "Gourmet Chef": "Шеф-гурман",
         "Cook every recipe.": "Приготовить каждый рецепт.",
+        "Moving Up": "Расширяйся",
         "Upgrade your house.": "Улучшить дом.",
+        "Living Large": "Роскошная жизнь",
         "Upgrade your house to the maximum size.": "Улучшить дом до максимального уровня.",
+        "D.I.Y.": "Сделай сам",
         "Craft 15 different items.": "Скрафтить 15 разных предметов.",
+        "Artisan": "Ремесленник",
         "Craft 30 different items.": "Скрафтить 30 разных предметов.",
+        "Craft Master": "Крафт-мастер",
         "Craft every item.": "Скрафтить все предметы.",
+        "Fisherman": "Рыбак",
         "Catch 10 different fish.": "Поймать 10 разных рыб.",
+        "Ol' Mariner": "Старый моряк",
         "Catch 24 different fish.": "Поймать 24 разные рыбы.",
+        "Master Angler": "Мастер-Удильщик",
         "Catch every fish.": "Поймать каждую рыбу.",
+        "Mother Catch": "Ловец",
         "Catch 100 fish.": "Поймать 100 рыб.",
+        "Treasure Trove": "Сокровищница",
         "Donate 40 different items to the museum.": "Пожертвовать 40 предметов в музей.",
+        "Gofer": "Поди-подай",
         "Complete 10 'Help Wanted' requests.": "Выполнить 10 запросов о помощи.",
+        "A Big Help": "Выручатель",
         "Complete 40 'Help Wanted' requests.": "Выполнить 40 запросов о помощи.",
+        "Polyculture": "Поликультура",
         "Ship 15 of each crop.": "Отправить по 15 культур.",
+        "Monoculture": "Монокультура",
         "Ship 300 of one crop.": "Отправить 300 единиц одной культуры.",
+        "Full Shipment": "Полная доставка",
         "Ship every item.": "Отправить каждый предмет."
     }
 }
