Little CompareKey optimization

--- a/TranslationMod/languages/RU/dictionaries/Dialogues.json
+++ b/TranslationMod/languages/RU/dictionaries/Dialogues.json
@@ -6081,7 +6081,7 @@
 		"__comment": "common",
 		"The valley looks more interesting in the rain... don't you think?": "Долина выглядит интереснее в дождь... тебе не кажется?",
 		"The rain doesn't stop me from getting a job done!": "Дождь не мешает мне делать работу!",
-		"Although soggy wood isn't a joy to work with.": "Хотя с сырой древесиной невесело работать.",
+		"Although soggy wood isn't a joy to work with.": "Хотя с сырой древесиной не очень весело работать.",
 		"Greetings. Stay inside if you want to keep warm.": "Привет. Оставайся внутри, если хочешь согреться.",
 		"When it rains I have a good excuse to work on my gadgets all day.": "Во время дождя у меня есть время на работу над своими устройствами.",
 		"It must be kind of boring for you, though.": "Хотя, для тебя это , наверное, скучно.",
