--- a/TranslationMod/languages/RU/dictionaries/Items.json
+++ b/TranslationMod/languages/RU/dictionaries/Items.json
@@ -23,7 +23,7 @@
         "Earth Crystal": "Земной кристалл",
         "Coconut": "Кокос",
         "Cactus Fruit": "Плод Кактуса",
-        "Sap": "Сок",
+        "Sap": "Сок растения",
         "Torch": "Факел",
         "Spirit Torch": "Призрачный Факел",
         "Dwarf Scroll I": "Гномий Свиток I",
@@ -1751,7 +1751,7 @@
         "Little Photos": "Маленькие фотографии",
         "'Dancing Grass'": "\"Танцующая трава\"",
         "'VGA Paradise'": "\"Рай VGA\"",
-        "J. Cola Light": "ЙоЙа Кола Лайт",
+        "J. Cola Light": "Светильник ДжоДжа Кола",
         "'Kitemaster '95'": "\"Мастер хитрости 95\"",
         "Basic Window": "Обычное окно",
         "Small Window": "Маленькое окно",
