fix merge errors

--- a/TranslationMod/languages/RU/dictionaries/Items.json
+++ b/TranslationMod/languages/RU/dictionaries/Items.json
@@ -57,6 +57,7 @@
         "A seed of the coconut palm. It has many culinary uses.": "Плод кокосовой пальмы. Используяется для приготовления различных блюд.",
         "Cactus Fruit": "Плод Кактуса",
         "The sweet fruit of the prickly pear cactus.": "Сладкий плод кактуса опунции.",
+        "Sap": "Сок растения",
         "A fluid obtained from trees.": "Жидкость, полученная из деревьев.",
         "Torch": "Факел",
         "Provides a modest amount of light.": "Немного освещает место вокруг себя.",
