fix some errors in renames

--- a/TranslationMod/languages/RU/dictionaries/_KeyWords.json
+++ b/TranslationMod/languages/RU/dictionaries/_KeyWords.json
@@ -1,6 +1,6 @@
 {
     "Animals": {
-        "﻿White Chicken": "Белая курица",
+        "White Chicken": "Белая курица",
         "Brown Chicken": "Рябая курица",
         "Void Chicken": "Цыпленок пустоты",
         "Chickens": "Куры",
