--- a/TranslationMod/languages/RU/dictionaries/GameLocation.json
+++ b/TranslationMod/languages/RU/dictionaries/GameLocation.json
@@ -69,7 +69,6 @@
 	"Your new @key will be ready in @number days. I'm going to be working on this thing day and night!": "Твой новый @key будет готов через @number дней. Я собираюсь работать над этим днем и ночью!",
 	"Your new @key will be finished tomorrow! Are you excited?": "Твой новый @key будет готов завтра! Ты в предвкушении?",
 	"           The Shrine Of Illusions  ^Make an offering of 500g to change your appearance?":"",
-	"Come back when someone's working.":"",
 	"Closed until summer.":"",
 	"Buy a Joja Cola for 75g?":"",
 	"Come back when someone's working.": "Возвращайся, когда кто-кто работает.",
@@ -253,17 +252,17 @@
 	"Skills": "Навыки",
 	"Farming involves growing crops and raising animals. Purchase seeds at Pierre's shop in town. Use your hoe to dig a 3x3 area on your farm      (Default key to use tools is 'c').":"",
 	"Stand in the center of the tilled area and spread the seeds. Water them every day if it isn't raining, and eventually they will be ready for harvest.":"",
-	"To raise animals you will need Robin to repair your coop or barn. Her shop can be found in the hills above town. When repairs are done, you can buy animals from Marnie's shop in the forest south of your farm.":"",
-	"Make sure to buy some feed as well. Each animal requires one piece of animal food every day. Inside the coop and barn are feed dispensers and food troughs. For each animal, place one piece of food per day into the trough.":"",
-	"Talk to your animals every day to improve their production skill. With a little planning and a bit of work, farming can be a reliable way of making a good income.":"",
-	"To fish, stand in front of the water and use your fishing rod. When something bites, use your rod again to claim your catch. Just make sure to be quick or whatever's biting might get away.":"",
-	"Wood and stone are required to repair and upgrade your buildings, and are also useful materials when crafting your own items. The hills north of town are a good place to gather wood and stone.":"",
-	"North of town you will find a cavern that leads deep into the earth. Inside, useful minerals and treasures await you... as well as danger.":"",
-	"Use your pickaxe to break open rocks. Sometimes you will find ores and gems. Digging in the ground can also unearth ores.":"",
-	"In addition to ores, roots, and minerals, digging can unearth ancient artifacts of archaeological significance. Some artifacts can only be found in certain areas. Bring these to Gunther in town.":"",
-	"Most of the buildings on your farm can be upgraded several times. These upgrades can be expensive, but in the long run they will allow you to earn more money.":"",
-	"Upgrading your coop and barn will increase your animal capacity. Upgrading your house will increase its size as well as grant special perks. Your first house upgrade comes with a kitchen and crafting table.":"",
-	"The second house upgrade will allow you to marry. The third will prove to the world that you are a great success! :}":"",
+	"To raise animals you will need Robin to repair your coop or barn. Her shop can be found in the hills above town. When repairs are done, you can buy animals from Marnie's shop in the forest south of your farm.": "Для того, чтобы растить животных, нужно чтобы Робин отремонтировать ваш курятник или сарай. Её магазин можно найти на холме чуть выше города. Когда ремонт будет закончен, вы сможете купить животных из магазина Марни в лесу к югу от фермы.",
+	"Make sure to buy some feed as well. Each animal requires one piece of animal food every day. Inside the coop and barn are feed dispensers and food troughs. For each animal, place one piece of food per day into the trough.": "Не забудьте купить корм. Каждому животному требуется один прием пищи каждый день. Внутри курятника и сарая находятся кормораздатчики и пищевые корыта. Положите по одной штуке корма в день для каждого животного в корыто.",
+	"Talk to your animals every day to improve their production skill. With a little planning and a bit of work, farming can be a reliable way of making a good income.": "Разговаривайте с животными каждый день, чтобы улучшить их производственные навыки. Немного планирования и работы и ваша ферма может стать надежным источником дохода.",
+	"To fish, stand in front of the water and use your fishing rod. When something bites, use your rod again to claim your catch. Just make sure to be quick or whatever's biting might get away.": "Для того, чтобы ловить рыбу, используйте удочку стоя перед водой. Когда начнёт клевать, снова используйте удочку, чтобы подсечь. Делаете это быстро, улов, не ускользнул.",
+	"Wood and stone are required to repair and upgrade your buildings, and are also useful materials when crafting your own items. The hills north of town are a good place to gather wood and stone.": "",
+	"North of town you will find a cavern that leads deep into the earth. Inside, useful minerals and treasures await you... as well as danger.": "",
+	"Use your pickaxe to break open rocks. Sometimes you will find ores and gems. Digging in the ground can also unearth ores.": "Используй свою кирку чтобы разламывать камни. Иногда так ты сможешь найти руду и драгоценные камни. Копанием земли также можно найти руду.",
+	"In addition to ores, roots, and minerals, digging can unearth ancient artifacts of archaeological significance. Some artifacts can only be found in certain areas. Bring these to Gunther in town.": "",
+	"Most of the buildings on your farm can be upgraded several times. These upgrades can be expensive, but in the long run they will allow you to earn more money.": "",
+	"Upgrading your coop and barn will increase your animal capacity. Upgrading your house will increase its size as well as grant special perks. Your first house upgrade comes with a kitchen and crafting table.": "",
+	"The second house upgrade will allow you to marry. The third will prove to the world that you are a great success! :}": "",
 	"The town blacksmith can upgrade your tools for you. He'll need a certain amount of ore and money for each upgrade. Upgraded tools can be 'charged up' by holding the use-tool key.":"",
 	"Charging your tool will either increase its power or area of effect.":"",
 	"As you earn money, you will 'level up' and gain skill points. These points can be distributed in different areas and will improve your abilities.":"",
