--- a/TranslationMod/languages/RU/dictionaries/Locations.json
+++ b/TranslationMod/languages/RU/dictionaries/Locations.json
@@ -31,11 +31,11 @@
 	"Not now...":"Не сейчас...",
 	"Old Mariner: I've got this old amulet to sell... but somethin' tells me yer not ready for it, lad." : "",
 	"Old Mariner: I've got this old amulet to sell... but somethin' tells me yer not ready for it, miss." : "",
-	"Can't upgrade while someone's inside.":"",
+	"Can't upgrade while someone's inside.": "Нельзя улучшить, пока кто-нибудь внутри.",
 	"Incorrect Building Type":"",
 	"Found 20g under the seat!":"",
 	"Girl: Hi! <":"",
-	"The bus hasn't arrived yet...":"",
+	"The bus hasn't arrived yet...": "Автобус еще не прибыл...",
 	"...No response.":"",
 	"Kid: 'Sup?":"",
 	"Kid: Dude, don't touch my board.":"",
@@ -123,7 +123,7 @@
 	"This area is infested...":"",
 	"This area is overrun with monsters.":"",
 	"You fell @number levels.":"",
-	"Ouch!":"",
+	"Ouch!": "Ауч!",
 	"There's a shaft leading down.":"",
 	"Jump In":"",
 	"Leave the mine":"",
@@ -177,7 +177,7 @@
 	"The other day I bought a fresh @key at Pierre's. It was perfect on a bed of greens and a dash of my 'special' vinaigrette.":"",
 	"It's just the back of Lewis' old pickup truck...":"",
 	"Choose destination:": "Выберите назначение.",
-	"Out of Business.": "Банкротство.",
+	"Out of Business.": "Банкрот.",
 	"Eww... What are you doing?$s":"",
 	"Um... Why are you digging in the trash?$s":"",
 	"Hey, Stop that! ...Yuck!$s":"",
