--- a/TranslationMod/languages/RU/dictionaries/Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/Menus.json
@@ -100,7 +100,7 @@
     "+1 Hoe Proficiency": "+1 к владению Мотыгой",
     "+1 Fishing Rod Proficieny": "+1 к владению Удочкой",
     "+1 Axe Proficiency": "+1 к владению Топором",
-    "Trees sometimes drop seeds.": "Деревя иногда роняют семена.",
+    "Trees sometimes drop seeds.": "С деревьев, иногда, выпадают семена.",
     "+1 Wild berry harvesting.": "+1 к собирательству диких ягод",
     "+1 Pickaxe Proficiency": "+1 к владению Киркой",
     "+5 HP": "+5 жизни",
@@ -113,13 +113,13 @@
     "Sheep produce wool faster.": "",
     "Artisan goods (wine, cheese, oil, etc.) worth 50% more.": "",
     "All crops grow 10% faster.": "",
-    "Fish worth 25% more.": "",
+    "Fish worth 25% more.": "Рыба стоит на 25% дороже.",
     "Resources required to craft crab pots reduced.": "",
-    "Fish worth 50% more.": "",
+    "Fish worth 50% more.": "Рыба стоит на 50% дороже.",
     "Chance to find treasure doubled.": "",
     "Crab pots no longer produce junk items.": "",
     "Crab pots no longer require bait.": "",
-    "Wood worth 50% more.": "",
+    "Wood worth 50% more.": "Дерево стоит на 50% дороже.",
     "Chance for double harvest of foraged items.": "",
     "All trees have a chance to drop hardwood.": "",
     "Syrups worth 25% more.": "",
