--- a/TranslationMod/languages/RU/dictionaries/Object.cs.json
+++ b/TranslationMod/languages/RU/dictionaries/Object.cs.json
@@ -30,18 +30,17 @@
   "__comment":"Buff.cs",
       "Full":"",
       "Quenched":"",
-      "Goblin's Curse@newline-3 Speed@newline-3 Defense":"Проклятие гоблина@newline-3 Скорость@newline-3 Защита",
-      "Slimed@newline-4 Speed":"",
-      "Jinxed@newline-8 Defense":"",
-      "Tipsy@newline-1 Speed":"",
-      "Spooked@newline-8 Attack":"",
-      "Frozen@newline-8 Speed":"",
-      "Warrior Energy@newline+10 Attack":"",
+      "Goblin's Curse@newline@number Speed@newline@number Defense":"Проклятие гоблина@newline@number Скорость@newline@number Защита",
+      "Slimed@newline@number Speed":"",
+      "Jinxed@newline@number Defense":"",
+      "Tipsy@newline@number Speed":"",
+      "Spooked@newline@number Attack":"",
+      "Frozen@newline@number Speed":"",
+      "Warrior Energy@newline@number Attack":"",
       "Yoba's Blessing@newlineInvincible":"",
-      "Adrenaline Rush@newline+2 Speed":"",
+      "Adrenaline Rush@newline@number Speed":"",
       "Oil of Garlic@newlineYour skin exudes a pungent aroma":"",
-    "__comment":"+1 Defense",
-      "+@number @key":"+@number @key",
+
       "Magnetic Radius":"Магнитный Радиус",
       "Source: @key":"Источник: @key",
       "Duration: @number:@number":"Длительность: @number:@number",
