--- a/TranslationMod/languages/RU/dictionaries/animationDescription.json
+++ b/TranslationMod/languages/RU/dictionaries/animationDescription.json
@@ -8,7 +8,7 @@
     "We're insulated from the rest of the world here in Stardew Valley. Maybe that's a good thing.": "Долина Стардью изолирована от остального мира. Может это и к лучшему.",
     "My arms are strong... *pant*... but my legs need work... *gasp*": "У меня сильные руки... *выдыхает* ...а вот ноги стоит подкачать... *вдыхает*",
     "Don't look! I'm all red and sweaty.": "Не смотри! Я вся красная и потная.",
-    "Shane's hard at work. He doesn't seem interested in talking.": "Шейн занят работой. Вряд ли он захочет говорить.",
+    "Shane's hard at work. He doesn't seem interested in talking.": "Шейн очень занят работой. Вряд ли он захочет говорить.",
     "Marnie smiles at you through a mist of sweat.": "Марни улыбается вам сквозь пар.",
     "Ungh... Breathe in.... Ungh.... Breathe out.": "Вдох... Вы-ыдох...",
     "Ms. Penny says I have to read this book before I can go play.": "Мис Пенни сказала, что разрешит играть только когда я прочитаю книжку.",
