--- a/TranslationMod/languages/RU/dictionaries/_Object.json
+++ b/TranslationMod/languages/RU/dictionaries/_Object.json
@@ -424,9 +424,11 @@
     "Can't place on wall": "Нельзя вешать на стену.",
     "Can't place on top of a person.":"Нельзя разместить поверх персонажа",
     "Can only be placed in House":"Можно разместить только внутри Дома",
+    "__comment":"Object/SpecialItem.cs",
     "Under a piece of wood, you found a @key! You're not sure what it's for, but it seems important. It's been added to your wallet.":"",
     "You've found the @key! You're not sure what it's for, but it seems important. It's been added to your wallet.":"",
     "You got the @key! Your inventory space has increased to @number.":"",
+    "__comment":"Object/TV.cs",
     "Weather Report": "Прогноз погоды",
     "Fortune Teller":"",
     "Livin' Off The Land":"",
@@ -467,6 +469,7 @@
     "The spirits are very displeased today. They will do their best to make your life difficult.":"",
     "The spirits are furious. Apparently someone tried to give them a worthless offering... Hmm. It's unwise to play jokes on the spirits!":"",
     "This is rare. The spirits feel absolutely neutral today.":"",
+    "__comment":"Object/Wallpaper.cs",
     "Wallpaper":"Обои",
     "Decorates the walls of one room":"Декорирует стены одной комнаты",
     "Flooring":"Напольное покрытие",
