--- a/TranslationMod/languages/RU/dictionaries/_Game1.json
+++ b/TranslationMod/languages/RU/dictionaries/_Game1.json
@@ -32,12 +32,12 @@
     "I'm too full...": "Больше нет мест...",
     "__comment": "spouse speaks:",
     "The wedding was wonderful... wasn't it, dear?$h#$e#Well, we can't forget about the farm... time to get to work.":"",
-    "Drink this @key?": "Выпить @keyR?",
-    "Drink a @key?": "Выпить @keyR?",
-    "Drink an @key?": "Выпить @keyR?",
-    "Eat this @key?": "Съесть @keyR?",
-    "Eat a @key?": "Съесть @keyR?",
-    "Eat an @key?": "Съесть @keyR?",
+    "Drink this @key?": "Выпить @keyV?",
+    "Drink a @key?": "Выпить @keyV?",
+    "Drink an @key?": "Выпить @keyV?",
+    "Eat this @key?": "Съесть @keyV?",
+    "Eat a @key?": "Съесть @keyV?",
+    "Eat an @key?": "Съесть @keyV?",
     "Nothing happens. Sandy said something about 'infusing it with the power of Yoba'.":"",
     "Place anything you want to sell in here.":"",
     "Empty the contents of your backpack into the shipping box?":"",
