--- a/TranslationMod/languages/RU/dictionaries/_KeyWords.json
+++ b/TranslationMod/languages/RU/dictionaries/_KeyWords.json
@@ -466,7 +466,7 @@
         "Artisan Goods":"Ремесленый товар",
         "Cooking":"Готовка",
         "Decor":"Декор",
-        "Fishing Tackle":"Раболовная снасть",
+        "Fishing Tackle":"Рыболовная снасть",
         "Bait":"Наживка",
         "Trash":"Мусор",
         "Fertilizer":"Удобрение",
