--- a/TranslationMod/languages/RU/dictionaries/_TBinStrings.json
+++ b/TranslationMod/languages/RU/dictionaries/_TBinStrings.json
@@ -296,7 +296,7 @@
 		"Our Beloved Mona": "",
 		" Archaeology Office - Open 8:00 AM to 6:00 PM": "",
   "__comment": "Town-Fair.tbin",
-		"Tourist: Man... I can't take another bite of this barbecue sandwich... so stuffed.N	": "",
+		"Tourist: Man... I can't take another bite of this barbecue sandwich... so stuffed.": "",
 		"Are you strong like me? Smash stone!": "",
 		"Tourist: Wow. That's the biggest cheese wheel I've ever seen. Very impressive.": "",
 		"Tourist: It was a long bus ride here, but totally worth it! This valley is so beautiful. Simon loves it... don't you, Simon?": "",
