small dictionary adds

--- a/TranslationMod/languages/RU/dictionaries/_Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/_Menus.json
@@ -170,6 +170,7 @@
     "Underground Mine": "Шахта",
     "Desert": "Пустыня",
     "Bus Stop": "Автобусная остановка",
+    "Saloon": "Салун",
     "Forest": "Лес",
     "Town": "Город",
     "Mountain": "Горы",
@@ -288,8 +289,9 @@
     "I can upgrade your tools with more power. You'll have to leave them with me for a few days, though.": "",
     "Need fishing supplies? You've come to the right place.": "",
     "Sorry about the smell.": "",
-    "Got anything you want to sell?": "",
-    "Need some supplies?": "",
+    "Welcome to Pierre's! @key":"Добро пожаловать к Пьерру! @key",
+    "Got anything you want to sell?": "Хочешь что-то продать?",
+    "Need some supplies?": "Нужны припасы?",
     "Don't forget to check out my daily wallpaper and flooring selection!": "",
     "What can I get for you?": "",
     "I carry only the finest goods.": "",
