clean up diactionaries:
- Events.json
- Festivals.json
- schedules.json
- EngagementDialogue.json

--- a/TranslationMod/languages/RU/dictionaries/schedules.json
+++ b/TranslationMod/languages/RU/dictionaries/schedules.json
@@ -1,17 +1,17 @@
 {
     "Dad seems to be doing okay without me around.": "У папы кажется все получается и без меня",
     "Hey, @. I like hanging out here. It's peaceful.": "Эй, @. Мне нравится тут тусоваться. Здесь спокойно.",
-    "Urgh... I still can't beat it by myself.$s": "Аргх.. Я до сих пор не могу победить его самостоятельно.$s",
-    "Ugh... I have a doctor's appointment later.$s": "",
-    "I'm just here for my annual check-up! Don't worry, I'm not preg... I mean, I'm not sick! Heh.$9": "",
-    "How much longer do you need, doc? I'm hungry.$s": "",
+    "Urgh... I still can't beat it by myself.": "Аргх.. Я до сих пор не могу победить его самостоятельно.",
+    "Ugh... I have a doctor's appointment later.": "",
+    "I'm just here for my annual check-up! Don't worry, I'm not preg... I mean, I'm not sick! Heh.": "",
+    "How much longer do you need, doc? I'm hungry.": "",
     "We're hiding in here so we don't have to talk to anyone.": "",
     "I'm going to hang out here all day. My grandparents aren't getting any younger...": "",
     "Hi. Eh, I just twisted my ankle. Seeing if I can get it taped.": "",
     "Yeah, yeah... I'm good, doc. Just tape it up, okay?": "",
     "It's my annual check-up today. At least I don't have to walk very far.": "",
     "You're here to see the doctor too? What happened?": "",
-    "Excuse me, I have to say some things to Doctor Harvey in private...$u": "",
+    "Excuse me, I have to say some things to Doctor Harvey in private...": "",
     "Hmm... Should I wear something special to the aerobics meet-up today?": "",
     "You're looking really fit, Jodi! Those dumbells do wonders, don't they?": "",
     "Mmff... I think I've earned some cookies today. *crunch*.": "",
@@ -29,28 +29,29 @@
     "Doctor, I'd like to go with the 'natural remedy' if possible.": "",
     "What a lovely loom. I'm in heaven right now.": "",
     "When you get to be my age you have to see the doctor more often.": "",
-    "Oh dear, is it an emergency? Why are you here?$s": "",
+    "Oh dear, is it an emergency? Why are you here?": "",
     "Now now, dear... It's important that Doctor Harvey takes a good look at you. He's a nice young man! Behave yourself, for your dear old wife's sake.": "",
     "Could you check his lungs? He's been wheezing lately.": "",
-    "This place is full of memories for me. Thank you so much for restoring it.$h": "",
+    "This place is full of memories for me. Thank you so much for restoring it.": "",
     "Hmmpph... The wife's making me go to the clinic today.": "Хмммфф... Жена заставляет меня пойти сегодня в больницу",
     "*grumble*... Good for nothing doctors... *grumble*": "",
     "Well how much longer do I have, Doc?": "",
     "I've never been religious but hey... I'm old.": "",
-    "I'm getting some supplies for the saloon. Pierre's got the good stuff.$h": "",
+    "I'm getting some supplies for the saloon. Pierre's got the good stuff.": "",
     "Seeing the doctor makes me nervous... What if I only have a few years left? I'm not at peace with the world yet!": "",
-    "It's my liver, isn't it Doctor? I can see it on your face. *Sigh*... I really need to cut back on that sweet, delicious Stardew Valley wine.$s": "",
+    "It's my liver, isn't it Doctor? I can see it on your face. *Sigh*... I really need to cut back on that sweet, delicious Stardew Valley wine.": "",
     "The weather's too horrible to get out of bed.": "",
     "Hi, honey! I'm mostly just here to visit Emily.": "",
     "It's nothing serious... I'm just here for my annual check-up.": "",
     "Well... my nose has been a little runny, Doctor. But otherwise I'm doing fine!": "",
     "It's too cold to get out of bed.": "",
-    "Hi Honey. What are you doing at the clinic?#$e#Ah, you just came to see me. That's nice.$h": "",
+    "Hi Honey. What are you doing at the clinic?":"",
+    "Ah, you just came to see me. That's nice.": "",
     "Hi! I'm just shopping for some essentials, so I can continue to cook healthy meals for us.": "",
     "The sound of running water is relaxing for me.": "",
     "This stuff can definitely be incorporated into a healthy diet.": "",
     "I'm just putting away these groceries.": "",
-    "1... 2... 3... 4... Here comes a wave! *giggle*$h": "",
+    "1... 2... 3... 4... Here comes a wave! *giggle*": "",
     "I have to visit the doctor today, but I'm not afraid!": "",
     "Can you show me how this tool works, Doctor Harvey?": "",
     "1... 2... 3... 4... Oh no! I messed up again.": "",
@@ -58,8 +59,8 @@
     "Be brave, Vincent. Think of your father.": "",
     "Doctor Harvey? I'm worried about Vincent's height. Isn't he a little short for his age?": "",
     "Vincent was very brave at the doctor's today. I'm proud of him.": "",
-    "Hey! You can't just barge into a private appointment!$u": "",
-    "Ohhh... My arms feel like gelatin... $s": "",
+    "Hey! You can't just barge into a private appointment!": "",
+    "Ohhh... My arms feel like gelatin... ": "",
     "Shhh... he's asleep.": "",
     "Hello, @. I'm just enjoying the fresh air for a while. I was starting to get cabin fever at home.": "",
     "Hi. Here to see the doctor?": "",
@@ -70,25 +71,25 @@
     "The library is one of Pelican Town's greatest features. It's funded with the taxes we collect from local business.": "",
     "I like to check in with the local businesses and see how they're doing.": "",
     "Erm... Doctor Harvey? This is completely confidential, right?": "",
-    "I do all my grocery shopping here.$h": "",
+    "I do all my grocery shopping here.": "",
     "Even someone like me needs to warm up indoors now and then.": "",
     "I think Jas actually likes going to the doctor. What an unusual little girl.": "",
     "We're here for a 1:30pm appointment.": "",
     "Erm... Doctor Harvey? When you give her the shots, can we have two lollipops?": "",
-    "I'm going to sleep well tonight.$h": "",
+    "I'm going to sleep well tonight.": "",
     "Hey! Mom seems to be doing okay without my help. She's a tough lady.": "",
     "Dad's making good progress on his experiment.": "",
     "I hope Penny decides to get married some day.": "",
     "I'm at work, honey! Don't let the doctor see.": "",
-    "It's nice for you to visit me.$h": "",
+    "It's nice for you to visit me.": "",
     "I'm almost off work...": "",
-    "It's hard to really grasp the scale of the universe.$8": "",
-    "*grumble*... Doctor know-it-all... *grumble*$4": "",
-    "How much do I drink every day? What kind of a question is that?$u": "",
+    "It's hard to really grasp the scale of the universe.": "",
+    "*grumble*... Doctor know-it-all... *grumble*": "",
+    "How much do I drink every day? What kind of a question is that?": "",
     "I'm going to go inside, I just wanted a quiet moment.": "",
     "I have an appointment at the clinic this afternoon.": "",
-    "Hey! A little privacy, please?$a": "",
-    "Hi, honey. It's nice of you to visit me at work.$h": "",
+    "Hey! A little privacy, please?": "",
+    "Hi, honey. It's nice of you to visit me at work.": "",
     "Hi, honey! I'm just doing some shopping.": "",
     "Don't worry, I'm using my own money to buy this.": "",
     "I wonder if Maru will get married some day?": "",
@@ -98,22 +99,22 @@
     "Nothing bad to report, Doc. I feel as healthy as ever.": "",
     "Mom seems okay. A little overworked, maybe.": "",
     "Vincent seems a little lonely without me around. I used to play with him a lot.": "",
-    "Nothing like an ice cold Joja Cola on a sopping wet day, huh?#$e#Just kidding. Hehehe.$h": "",
-    "I gotta go visit Uncle Doctor today... Great.$7": "",
+    "Nothing like an ice cold Joja Cola on a sopping wet day, huh?##Just kidding. Hehehe.": "",
+    "I gotta go visit Uncle Doctor today... Great.": "",
     "I'm a healthy boy, doc. Can I go now? This is boring.": "",
-    "I just got out of the doctor's office. Completely healthy and vigorous, just as I expected.$h": "",
+    "I just got out of the doctor's office. Completely healthy and vigorous, just as I expected.": "",
     "The ocean is best enjoyed alone... don't you think?": "",
     "Standing at this spot really makes me want a smoke... but I'm determined to quit now.": "",
-    "Mom's face lit up when I walked in. She deserves to be happy.$7": "",
+    "Mom's face lit up when I walked in. She deserves to be happy.": "",
     "Dammit... I almost forgot. I have to go see Doctor Harvey today.": "",
-    "What are you doing in here? I could've been naked!$a": "",
-    "Should I let Sam win for once? ...nah.$h": "",
-    "*sob*... I have to get my shots today.$s": "",
-    "*gulp*... Mommy, don't make me do it.$s": "",
+    "What are you doing in here? I could've been naked!": "",
+    "Should I let Sam win for once? ...nah.": "",
+    "*sob*... I have to get my shots today.": "",
+    "*gulp*... Mommy, don't make me do it.": "",
     "Do I get a lollipop for being so brave?": "",
     "Eh, I got a fish hook stuck in my thumb... the Doctor's gonna cut it out.": "",
-    "Yowch! That hurt, Doc!$s": "",
-    "I need a little warm-me-up to be ready for another cold night on the ocean.$h": "",
-    "Ah... Nothing's better than kicking back with a cold one after a relaxing day fishing.$h": "",
+    "Yowch! That hurt, Doc!": "",
+    "I need a little warm-me-up to be ready for another cold night on the ocean.": "",
+    "Ah... Nothing's better than kicking back with a cold one after a relaxing day fishing.": "",
     "Handling salty fish all day makes me real thirsty.": ""
 }
