--- a/TranslationMod/languages/RU/dictionaries/EngagementDialogue.json
+++ b/TranslationMod/languages/RU/dictionaries/EngagementDialogue.json
@@ -1,22 +1,39 @@
 {
-    "I'm really excited.$h#$b#I'm going to be your wife. Hehe.$l": "Я очень рада.$h#$b#Я собираюсь стать твоей женой. Ха-ха.$l",
+    "I'm really excited.":"Я очень рада.",
+    "I'm going to be your wife. Hehe.": "Я собираюсь стать твоей женой. Ха-ха.",
     "I need to get mentally prepared for being a farmer's wife.": "Мне нужно подготовиться, чтобы стать женой фермера.",
-    "...$l#$e#I'm a little nervous. But happy.$h": "..$l#$e#Я немного нервничаю. Но я счастлива.$h",
-    "I've always dreamed of living on a farm.$h#$e#I'm going to be so happy.": "Я всегда мечтала о жизни на ферме.$h#$e#Я буду счастлива.",
-    "I'm so happy!$h#$e#It's just like I always dreamed.$l": "Я так счастлива!$h#$e#Как будто всегда об этом мечтала.$l",
-    "It's okay. I know we can't have a honeymoon, since your farm needs to be taken care of.#$e#I'm a farmer now, too!": "Все в порядке. Я знаю, что у нас не будет медового месяца, ведь о ферме надо заботиться.#$e#Теперь я тоже фермер!",
-    "@.. I'm a little scared. This is such a big change!#$e#Don't worry, I'm really happy, too.$h": "@.. Мне немного страшно. Столько перемен!#$e#Не переживай, я тоже счастлива.$h",
-    "We're going to have a little farm family, soon.$l#$e#I'm so glad you feel this way about me.$h": "Скоро у нас будет маленькая семья фермеров.$l#$e#Я так рада, что ты испытываешь ко мне такие чувства.$h",
-    "Hehe. Me? Married? I never thought this would happen.$h#$e#We're going to have a lot of fun together.$h": "Хе-хе. Меня? Замуж? Я никогда не думала, что такое произойдет.$h#$e#Мы будем много веселиться вместе.$h",
-    "I'm engaged to a farmer. Wow!$h#$e#Our lives are going to be a lot different from now on.$l": "Я помолвлена с фермером. Вау!$h#$e#Наша жизнь немного изменится.$l",
-    "I'm going to be really happy as your husband, @.$l#$e#I'm excited.": "Я правда буду счастлив быть твоим мужем. @.$l#$e#Я взволнован.",
-    "I never dreamed this would happen. I'm so lucky.$l#$e#I can't wait till the wedding.$h": "Я не представлял, что это случится. Мне повезло.$l#$e#Не могу дождаться свадьбы.$h",
-    "In a couple days I'm going to be living on a farm. I can't believe it.$h#$e#I'm happy, though.$l": "Через пару дней я буду жить на ферме. Я не могу в это поверить.$h#$e#Хотя, я счастлив.",
-    "When you showed up in town, I never thought I'd be marrying you some day.$l#$e#Life is strange, huh?$h": "Когда увидел тебя первый раз, не думал, что однажды выйду за тебя.$l#$e#Жизнь - странная штука, да?$h",
-    "Oh my goodness! I have so much to prepare before the wedding! I'm nervous.$l#$e#I'll be relieved after we're all settled in on your farm.$h": "О боже мой! Мне так много нужно подготовить перед свадьбой! Я нервничаю.$l#$e#Я успокоюсь, после того, как мы все уладим на твоей ферме.$h",
-    "I'm really happy.$h#$e#This was always my secret wish.$l": "Я правда счастлива.$h#$e#Это всегда было мое тайное желание.$l",
-    "The farm will be such a lovely place to write. I'm really looking forward to this.$h#$e#We're going to make a great pair.$l": "Ферма будет прекрасным местом, чтобы писать. Я с нетерпением жду этого.$h#$e#Мы будем отличной парой.$l",
-    "This is going to be such an adventure! I'm really excited. Aren't you?$h#$e#We can use my cottage as a beach house.$l": "Это будет такое приключение! Я как-то волнуюсь. А ты?$h#$e#Мы можем использовать мою хижину как домик на пляже.$l",
-    "@, this is the greatest thing that could have happened.$l#$e#I can't wait.$h": "@, это лучшее, что могло случиться.$l#$e#Не могу дождаться.$h",
-    "I'm going to love being a farmer.$h": "Мне понравится быть фермером.$h"
+    "I'm a little nervous. But happy.": "Я немного нервничаю. Но я счастлива.",
+    "I've always dreamed of living on a farm.":"Я всегда мечтала о жизни на ферме.",
+    "I'm going to be so happy.": "Я буду счастлива.",
+    "I'm so happy!":"Я так счастлива!",
+    "It's just like I always dreamed.": "Как будто всегда об этом мечтала.",
+    "It's okay. I know we can't have a honeymoon, since your farm needs to be taken care of.":"Все в порядке. Я знаю, что у нас не будет медового месяца, ведь о ферме надо заботиться.",
+    "I'm a farmer now, too!": "Теперь я тоже фермер!",
+    "@.. I'm a little scared. This is such a big change!":"@.. Мне немного страшно. Столько перемен!",
+    "Don't worry, I'm really happy, too.": "Не переживай, я тоже счастлива.",
+    "We're going to have a little farm family, soon.":"Скоро у нас будет маленькая семья фермеров.",
+    "I'm so glad you feel this way about me.": "Я так рада, что ты испытываешь ко мне такие чувства.",
+    "Hehe. Me? Married? I never thought this would happen.":"Хе-хе. Меня? Замуж? Я никогда не думала, что такое произойдет.",
+    "We're going to have a lot of fun together.": "Мы будем много веселиться вместе.",
+    "I'm engaged to a farmer. Wow!":"Я помолвлена с фермером. Вау!",
+    "Our lives are going to be a lot different from now on.": "Наша жизнь немного изменится.",
+    "I'm going to be really happy as your husband, @.":"Я правда буду счастлив быть твоим мужем, @.",
+    "I'm excited.": "Я взволнован.",
+    "I never dreamed this would happen. I'm so lucky.":"Я не представлял, что это случится. Мне повезло.",
+    "I can't wait till the wedding.": "Не могу дождаться свадьбы.",
+    "In a couple days I'm going to be living on a farm. I can't believe it.":"Через пару дней я буду жить на ферме. Я не могу в это поверить.",
+    "I'm happy, though.": "Хотя, я счастлив.",
+    "When you showed up in town, I never thought I'd be marrying you some day.":"Когда увидел тебя первый раз, не думал, что однажды выйду за тебя.",
+    "Life is strange, huh?": "Жизнь - странная штука, да?",
+    "Oh my goodness! I have so much to prepare before the wedding! I'm nervous.":"О боже мой! Мне так много нужно подготовить перед свадьбой! Я нервничаю.",
+    "I'll be relieved after we're all settled in on your farm.": "Я успокоюсь, после того, как мы все уладим на твоей ферме.",
+    "I'm really happy.":"Я правда счастлива.",
+    "This was always my secret wish.": "Это всегда было мое тайное желание.",
+    "The farm will be such a lovely place to write. I'm really looking forward to this.":"Ферма будет прекрасным местом, чтобы писать. Я с нетерпением жду этого.",
+    "We're going to make a great pair.": "Мы будем отличной парой.",
+    "This is going to be such an adventure! I'm really excited. Aren't you?":"Это будет такое приключение! Я как-то волнуюсь. А ты?",
+    "We can use my cottage as a beach house.": "Мы можем использовать мою хижину как домик на пляже.",
+    "@, this is the greatest thing that could have happened.":"@, это лучшее, что могло случиться.",
+    "I can't wait.": "Не могу дождаться.",
+    "I'm going to love being a farmer.": "Мне понравится быть фермером."
 }
